chore: update clients
