# drip-ts/models/DripCommon.ts
@@ -1,0 +1,96 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Drip Backend
+ * Drip backend service. All API\'s have a IP rate limit of 10 requests per second. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: mocha@dcaf.so
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface DripCommon
+ */
+export interface DripCommon {
+    /**
+     * 
+     * @type {string}
+     * @memberof DripCommon
+     */
+    vault: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DripCommon
+     */
+    vaultProtoConfig: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DripCommon
+     */
+    vaultTokenAAccount: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DripCommon
+     */
+    vaultTokenBAccount: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DripCommon
+     */
+    tokenAMint: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof DripCommon
+     */
+    tokenBMint: string;
+}
+
+export function DripCommonFromJSON(json: any): DripCommon {
+    return DripCommonFromJSONTyped(json, false);
+}
+
+export function DripCommonFromJSONTyped(json: any, ignoreDiscriminator: boolean): DripCommon {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'vault': json['vault'],
+        'vaultProtoConfig': json['vaultProtoConfig'],
+        'vaultTokenAAccount': json['vaultTokenAAccount'],
+        'vaultTokenBAccount': json['vaultTokenBAccount'],
+        'tokenAMint': json['tokenAMint'],
+        'tokenBMint': json['tokenBMint'],
+    };
+}
+
+export function DripCommonToJSON(value?: DripCommon | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'vault': value.vault,
+        'vaultProtoConfig': value.vaultProtoConfig,
+        'vaultTokenAAccount': value.vaultTokenAAccount,
+        'vaultTokenBAccount': value.vaultTokenBAccount,
+        'tokenAMint': value.tokenAMint,
+        'tokenBMint': value.tokenBMint,
+    };
+}
+
